--- a/provisioning.yml
+++ b/provisioning.yml
@@ -6,3 +6,9 @@
         name: php7.2
         state: latest
       become: yes
+
+    - name: 'Instala o Apache2'
+      apt:
+        name: apache2
+        state: latest
+      become: yes
