Install php-mod-apache2

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -12,3 +12,9 @@
         name: apache2
         state: latest
       become: yes
+
+    - name: 'Instala o modphp'
+      apt:
+        name: libapache2-mod-php7.2
+        state: latest
+        become: yes
