--- a/provisioning.yml
+++ b/provisioning.yml
@@ -3,13 +3,15 @@
   tasks:
     - name: 'Instala pacotes de dependencia do sistema operaiconal'
       apt:
-        name: "{{ item }}"
-        state: latest
-      become: yes
-      with_items:
+        name:
           - php7.2
           - apache2
           - libapache2-mod-php7.2
+          - php7.2-gd
+          - php-ssh2
+          - libmcrypt-dev
           - mysql-server-5.7
           - python-mysqldb
           - php7.2-mysql
+        state: latest
+      become: yes
