--- a/provisioning.yml
+++ b/provisioning.yml
@@ -31,3 +31,15 @@
         priv: 'wordpress_db.*:ALL'
         state: present
       become: yes
+      
+    - name: 'Baixa o arquivo de instalacao do Wordpress'
+      get_url:
+        url: https://wordpress.org/latest.tar.gz'
+        dest: '/tmp/wordpress.tar.gz'
+
+    - name: 'Descompacta o wordpress'
+      unarchive:
+        src: '/tmp/wordpress.tar.gz'
+        dest: /var/www/
+        remote_src: yes
+      become: yes
