--- a/provisioning.yml
+++ b/provisioning.yml
@@ -49,3 +49,14 @@
         dest: '/var/www/wordpress/wp-config.php'
         remote_src: yes
       become: yes
+    
+    - name: 'Configura o wp-config com as entradas do banco de dados'     
+      replace:
+        path: '/var/www/wordpress/wp-config.php'
+        regexp: "{{ item.regex }}"
+        replace: "{{ item.value }}"
+      with_items:
+        - { regex: 'database_name_here', value: 'wordpress_db'}
+        - { regex: 'username_here', value: 'wordpress_user'}
+        - { regex: 'password_here', value: '12345'}
+      become: yes
