--- a/provisioning.yml
+++ b/provisioning.yml
@@ -1,5 +1,12 @@
 ---
 - hosts: all
+  handlers:
+    - name: restart apache
+      service:
+        name: apache2
+        state: restarted
+      become: yes
+      
   tasks:
     - name: 'Instala pacotes de dependencia do sistema operacional'
       apt:
@@ -60,3 +67,11 @@
         - { regex: 'username_here', value: 'wordpress_user'}
         - { regex: 'password_here', value: '12345'}
       become: yes
+    
+    - name: 'Configura Apache para servir o Wordpress'
+      copy:
+        src: 'files/000-default.conf'
+        dest: '/etc/apache2/sites-available/000-default.conf'
+      become: yes
+      notify:
+        - restart apache
