--- a/provisioning.yml
+++ b/provisioning.yml
@@ -1,5 +1,31 @@
 ---
-- hosts: all
+- hosts: database
+  tasks:
+    - name: 'Instala pacotes de dependencia do sistema operacional'
+      apt:
+        name:
+          - mysql-server-5.7
+          - python3-mysqldb
+        state: latest
+      become: yes
+    
+    - name: 'Cria o banco MySQL'
+      mysql_db:
+        name: wordpress_db
+        login_user: root
+        state: present
+      become: yes
+
+    - name: 'Cria o usuário do MySQL'
+      mysql_user:
+        login_user: root
+        name: wordpress_user
+        password: 12345
+        priv: 'wordpress_db.*:ALL'
+        state: present
+      become: yes
+
+- hosts: wordpress
   handlers:
     - name: restart apache
       service:
@@ -17,8 +43,6 @@
           - php7.2-gd
           - php-ssh2
           - libmcrypt-dev
-          - mysql-server-5.7
-          - python3-mysqldb
           - php7.2-mysql
         state: latest
       become: yes
