--- a/provisioning.yml
+++ b/provisioning.yml
@@ -18,7 +18,7 @@
     
     - name: 'Cria o banco MySQL'
       mysql_db:
-        name: wordpress_db
+        name: "{{ wp_db_name }}"
         login_user: root
         state: present
       become: yes
@@ -26,15 +26,15 @@
     - name: 'Cria o usuário do MySQL'
       mysql_user:
         login_user: root
-        name: wordpress_user
-        password: 12345
-        priv: 'wordpress_db.*:ALL'
+        name: "{{ wp_username }}"
+        password: "{{ wp_user_password }}"
+        priv: "{{ wp_db_name }}.*:ALL"
         state: present
         host: "{{ item }}"
       with_items:
         - 'localhost'
         - '127.0.0.1'
-        - '10.193.40.98'
+        - "{{ wp_host_ip }}"
       become: yes
 
     - name: 'Configura MySQL para aceitar conexões remotas'
@@ -80,21 +80,21 @@
       become: yes
     
     - copy:
-        src: '/var/www/wordpress/wp-config-sample.php'
-        dest: '/var/www/wordpress/wp-config.php'
+        src: "{{ wp_installation_dir }}/wp-config-sample.php"
+        dest: "{{ wp_installation_dir }}/wp-config.php"
         remote_src: yes
       become: yes
     
     - name: 'Configura o wp-config com as entradas do banco de dados'     
       replace:
-        path: '/var/www/wordpress/wp-config.php'
+        path: "{{ wp_installation_dir }}/wp-config.php"
         regexp: "{{ item.regex }}"
         replace: "{{ item.value }}"
       with_items:
-        - { regex: 'database_name_here', value: 'wordpress_db'}
-        - { regex: 'username_here', value: 'wordpress_user'}
-        - { regex: 'password_here', value: '12345'}
-        - { regex: 'localhost', value: '10.193.40.97'}
+        - { regex: 'database_name_here', value: "{{ wp_db_name }}"}
+        - { regex: 'username_here', value: "{{ wp_username }}"}
+        - { regex: 'password_here', value: "{{ wp_user_password }}"}
+        - { regex: 'localhost', value: "{{ wp_db_ip }}"}
       become: yes
     
     - name: 'Configura Apache para servir o Wordpress'
