Update task: Configura Apache para servir o Wordpress

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -98,9 +98,9 @@
       become: yes
     
     - name: 'Configura Apache para servir o Wordpress'
-      copy:
-        src: 'files/000-default.conf'
+      template:
+        src: 'templates/000-default.conf.j2'
         dest: '/etc/apache2/sites-available/000-default.conf'
       become: yes
-      notify:
+      notify: 
         - restart apache
