--- a/provisioning.yml
+++ b/provisioning.yml
@@ -1,49 +1,7 @@
 ---
 - hosts: database
-  handlers:
-    - name: restart mysql
-      service: 
-        name: mysql
-        state: restarted
-      become: yes
-
-  tasks:
-    - name: 'Instala pacotes de dependencia do sistema operacional'
-      apt:
-        name:
-          - mysql-server-5.7
-          - python3-mysqldb
-        state: latest
-      become: yes
-    
-    - name: 'Cria o banco MySQL'
-      mysql_db:
-        name: "{{ wp_db_name }}"
-        login_user: root
-        state: present
-      become: yes
-
-    - name: 'Cria o usuário do MySQL'
-      mysql_user:
-        login_user: root
-        name: "{{ wp_username }}"
-        password: "{{ wp_user_password }}"
-        priv: "{{ wp_db_name }}.*:ALL"
-        state: present
-        host: "{{ item }}"
-      with_items:
-        - 'localhost'
-        - '127.0.0.1'
-        - "{{ wp_host_ip }}"
-      become: yes
-
-    - name: 'Configura MySQL para aceitar conexões remotas'
-      copy:
-        src: 'files/mysqld.cnf'
-        dest: '/etc/mysql/mysql.conf.d/mysqld.cnf'
-      become: yes
-      notify:
-        - restart mysql
+  roles:
+    - mysql
 
 - hosts: wordpress
   handlers:
