--- a/provisioning.yml
+++ b/provisioning.yml
@@ -10,21 +10,11 @@
         name: apache2
         state: restarted
       become: yes
-      
-  tasks:
-    - name: 'Instala pacotes de dependencia do sistema operacional'
-      apt:
-        name:
-          - php7.2
-          - apache2
-          - libapache2-mod-php7.2
-          - php7.2-gd
-          - php-ssh2
-          - libmcrypt-dev
-          - php7.2-mysql
-        state: latest
-      become: yes
-      
+
+  roles:
+    - webserver
+
+  tasks:      
     - name: 'Baixa o arquivo de instalacao do Wordpress'
       get_url:
         url: https://wordpress.org/latest.tar.gz'
